--- a/112.html
+++ b/112.html
@@ -88,6 +88,11 @@
     <br><font size="5px"><b>[정답을 입력하세요]</b></font></center>
 
     <script>
+    // 마우스 오른쪽 버튼 클릭 금지
+    document.addEventListener('contextmenu', function(e) {
+    e.preventDefault();
+    });
+
       let wincount = 0;
       let losecount = 0;
       var timeout;
@@ -101,7 +106,7 @@
           if(x1 < 1) x1 -= 1;
           if(x2 < 1) x2 -= 1;
 
-          // 정답 확인
+          // 정답 확인 "r1은 최종 정답"
           if(x3 == 0) {
               r1 = x1 + x2;
           } else {
