--- a/122.html
+++ b/122.html
@@ -90,7 +90,7 @@
       <button class="button" onclick="appendNumber('/')">/</button>
       <button class="button" onclick="clearInput()">C</button>
       <button class="button" onclick="backspace()">←</button>
-      <button class="button" onclick="main()" style="background-color: rgb(97, 174, 245);">확인</button>
+      <button class="button" onclick="main()" style="background-color: #3399FF; color: white;">확인</button>
     </div>
 
     <hr/>
