--- a/322.html
+++ b/322.html
@@ -3,6 +3,13 @@
 <head>
 <meta charset="UTF-8" />
 <title>이차방정식</title>
+<script>
+  window.MathJax = {
+    tex: {
+      inlineMath: [['$', '$'], ['\\(', '\\)']]
+    }
+  };
+</script>
 <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js" async></script>
 <style>
   body {
@@ -24,8 +31,8 @@
   .choices button {
     width: 400px;
     height: 80px;
-    margin: 10px 0;
-    padding-top: 0;
+    margin: 5px 0;
+    padding-top: -25px;
     padding-bottom: 0;
     padding-left: 10px;
     padding-right: 10px;
@@ -39,6 +46,7 @@
   .correct { background-color: #4CAF50 !important; color: white !important; }
   .wrong { background-color: #f44336 !important; color: white !important; }
   .stage-btn {
+    font-size: 18px;
     padding: 10px 20px;
     margin: 5px;
     border-radius: 10px;
@@ -60,17 +68,23 @@
 
 <h1>이차방정식</h1>
 <div>
-  <button class="stage-btn" onclick="setStage(1)">1단계 (a=1, √D 유리수)</button>
-  <button class="stage-btn" onclick="setStage(2)">2단계 (a=1, √D 무리수)</button>
-  <button class="stage-btn" onclick="setStage(3)">3단계 (a=1, 모두)</button><br>
-  <button class="stage-btn" onclick="setStage(4)">4단계 (√D 유리수)</button>
-  <button class="stage-btn" onclick="setStage(5)">5단계 (√D 무리수)</button>
-  <button class="stage-btn" onclick="setStage(6)">6단계 (모두)</button>
+  <button class="stage-btn" onclick="setStage(1)">1단계</button>
+  <button class="stage-btn" onclick="setStage(2)">2단계</button>
+  <button class="stage-btn" onclick="setStage(3)">3단계</button><br>
+  <button class="stage-btn" onclick="setStage(4)">4단계</button>
+  <button class="stage-btn" onclick="setStage(5)">5단계</button>
+  <button class="stage-btn" onclick="setStage(6)">6단계</button>
 </div>
 <div class="question" id="questionBox"></div>
 <div class="choices" id="choicesBox"></div>
-<div id="scoreBoard">정답: 0 | 오답: 0</div><br>
+<div id="scoreBoard" style="font-size:25px">정답: 0 | 오답: 0</div><br>
 <button onclick="generateQuiz()" style="width:300px; height:80px; font-size:36px;border-radius:20px;border:1px solid #ffffff;background:#a3f3a6;cursor:pointer;">다음 문제</button>
+
+<div style="font-size:20px">1-3단계: $a=1$<br>
+  4~6단계:  $a$는 모든 수<br>
+  1,4단계: $\sqrt{D}$ 유리수<br>
+  2,5단계: $\sqrt{D}$ 무리수<br>
+  3,6단계: 모두</div><br>
 
 <script>
   let currentStage = 1;
