--- a/222.html
+++ b/222.html
@@ -28,6 +28,9 @@
       border-radius: 10px; border: none; background-color: #DDDDDD; cursor: pointer;
     }
     .button:hover { background-color: #bbb; }
+    #result1 {
+  min-height: 45px; /* 글자 높이만큼 */
+}
   </style>
 </head>
 <body>
@@ -74,15 +77,18 @@
     <div id="result2" style="font-size:30px;">0번 정답입니다.</div>
     <div id="result3" style="font-size:30px;">0번 틀렸습니다.</div>
 
-    <!--정답확인용 1/3-->
+    <!--정답확인용 1/3
   <div id="answer" style="font-size:28px; margin-top:20px; color:#888;">
     (정답: x = <span id="showX"></span>, y = <span id="showY"></span>)
-  </div>
+  </div>-->
 
 
   </center>
 
   <script>
+    // 오른쪽 마우스 금지
+    document.addEventListener('contextmenu', e => e.preventDefault());
+
     let currentStage = 1;
     let selectedInput = 'x';
     let solutionX = 0;
@@ -109,6 +115,7 @@
       document.getElementById('inputX').classList.remove('selected');
       document.getElementById('inputY').classList.remove('selected');
       document.getElementById('result1').textContent = "";
+      document.getElementById("result1").style.backgroundColor = "white";
       if (target === 'x') {
         document.getElementById('inputX').classList.add('selected');
       } else {
