--- a/222.html
+++ b/222.html
@@ -29,8 +29,12 @@
     }
     .button:hover { background-color: #bbb; }
     #result1 {
-  min-height: 45px; /* 글자 높이만큼 */
-}
+      min-height: 45px;
+    }
+    #nextBtn:disabled {
+      background-color: #aaa !important;
+      cursor: not-allowed;
+    }
   </style>
 </head>
 <body>
@@ -69,7 +73,8 @@
       <button class="button" onclick="appendNumber('/')">/</button>
       <button class="button" onclick="clearInput()">C</button>
       <button class="button" onclick="backspace()">←</button>
-      <button class="button" onclick="checkAnswer()" style="background-color: #3399FF; color: white;">확인</button>
+      <button class="button" onclick="checkAnswer()" style="background-color: #3399FF; color: white;">확인</button><br><br>
+      <button id="nextBtn" class="button" onclick="generateProblem()" style="background-color: #3399FF; color: white; width: 320px;" disabled>다음 문제(Space)</button>
     </div>
 
     <hr/>
@@ -77,16 +82,13 @@
     <div id="result2" style="font-size:30px;">0번 정답입니다.</div>
     <div id="result3" style="font-size:30px;">0번 틀렸습니다.</div>
 
-    <!--정답확인용 1/3
-  <div id="answer" style="font-size:28px; margin-top:20px; color:#888;">
-    (정답: x = <span id="showX"></span>, y = <span id="showY"></span>)
-  </div>-->
-
-
+    <!-- 정답확인용 1/3 -->
+    <!-- <div id="answer" style="font-size:28px; margin-top:20px; color:#888;">
+      (정답: x = <span id="showX"></span>, y = <span id="showY"></span>)
+    </div> -->
   </center>
 
   <script>
-    // 오른쪽 마우스 금지
     document.addEventListener('contextmenu', e => e.preventDefault());
 
     let currentStage = 1;
@@ -115,11 +117,12 @@
       document.getElementById('inputX').classList.remove('selected');
       document.getElementById('inputY').classList.remove('selected');
       document.getElementById('result1').textContent = "";
-      document.getElementById("result1").style.backgroundColor = "white";
       if (target === 'x') {
         document.getElementById('inputX').classList.add('selected');
+        document.getElementById('inputX').value = ""; // 선택 시 값 지우기
       } else {
         document.getElementById('inputY').classList.add('selected');
+        document.getElementById('inputY').value = ""; // 선택 시 값 지우기
       }
     }
 
@@ -142,73 +145,55 @@
     }
 
     function generateProblem() {
+      document.getElementById('nextBtn').disabled = true; // 다음 문제 버튼 비활성화
       let a,b,c,d,e,f;
       while (true) {
-    if (currentStage === 1) {
-      // 0이 나오지 않도록 1~9 또는 -1~-9 중에서 선택
-      solutionX = (Math.random() < 0.5 ? 1 : -1) * (Math.floor(Math.random() * 9) + 1);
-      solutionY = (Math.random() < 0.5 ? 1 : -1) * (Math.floor(Math.random() * 9) + 1);
-    } else if (currentStage === 2) {
-      solutionX = (Math.random() < 0.5 ? 1 : -1) * (Math.floor(Math.random() * 9) + 1);
-      solutionY = (Math.random() < 0.5 ? 1 : -1) * (Math.floor(Math.random() * 9) + 1);
-    } else if (currentStage === 3) {
-      // 분수 세트
-      const fractions = [1/2, 1/3, 2/3, 1/4, 3/4, 1/5, 2/5, 3/5, 4/5, 1/6, 5/6];
-      const fracX = fractions[Math.floor(Math.random() * fractions.length)];
-      const fracY = fractions[Math.floor(Math.random() * fractions.length)];
-      // 부호 랜덤
-      solutionX = Math.random() < 0.5 ? fracX : -fracX;
-      solutionY = Math.random() < 0.5 ? fracY : -fracY;
-    } else {
-      if (Math.random() < 0.4) {
-        solutionX = (Math.random() < 0.5 ? 1 : -1) * (Math.floor(Math.random() * 9) + 1);
-      solutionY = (Math.random() < 0.5 ? 1 : -1) * (Math.floor(Math.random() * 9) + 1);
-      } else {
-        const fractions = [1/2, 1/3, 2/3, 1/4, 3/4, 1/5, 2/5, 3/5, 4/5, 1/6, 5/6];
-        const fracX = fractions[Math.floor(Math.random() * fractions.length)];
-        const fracY = fractions[Math.floor(Math.random() * fractions.length)];
-        solutionX = Math.random() < 0.5 ? fracX : -fracX;
-        solutionY = Math.random() < 0.5 ? fracY : -fracY;
+        if (currentStage === 1 || currentStage === 2) {
+          solutionX = (Math.random() < 0.5 ? 1 : -1) * (Math.floor(Math.random() * 9) + 1);
+          solutionY = (Math.random() < 0.5 ? 1 : -1) * (Math.floor(Math.random() * 9) + 1);
+        } else if (currentStage === 3) {
+          const fractions = [1/2, 1/3, 2/3, 1/4, 3/4, 1/5, 2/5, 3/5, 4/5, 1/6, 5/6];
+          solutionX = (Math.random() < 0.5 ? 1 : -1) * fractions[Math.floor(Math.random() * fractions.length)];
+          solutionY = (Math.random() < 0.5 ? 1 : -1) * fractions[Math.floor(Math.random() * fractions.length)];
+        } else {
+          if (Math.random() < 0.4) {
+            solutionX = (Math.random() < 0.5 ? 1 : -1) * (Math.floor(Math.random() * 9) + 1);
+            solutionY = (Math.random() < 0.5 ? 1 : -1) * (Math.floor(Math.random() * 9) + 1);
+          } else {
+            const fractions = [1/2, 1/3, 2/3, 1/4, 3/4, 1/5, 2/5, 3/5, 4/5, 1/6, 5/6];
+            solutionX = (Math.random() < 0.5 ? 1 : -1) * fractions[Math.floor(Math.random() * fractions.length)];
+            solutionY = (Math.random() < 0.5 ? 1 : -1) * fractions[Math.floor(Math.random() * fractions.length)];
+          }
+        }
+
+        a = getNonOneCoeff();
+        b = getNonOneCoeff();
+        d = getNonOneCoeff();
+        e = getNonOneCoeff();
+
+        if (currentStage === 1) {
+          if (Math.random() < 0.5) {
+            d = Math.random() < 0.5 ? Math.abs(a) : -Math.abs(a);
+          } else {
+            e = Math.random() < 0.5 ? Math.abs(b) : -Math.abs(b);
+          }
+        }
+
+        if (a * e === b * d) continue;
+
+        c = Math.round(a * solutionX + b * solutionY);
+        f = Math.round(d * solutionX + e * solutionY);
+
+        if (c < -20 || c > 20) continue;
+        if (f < -20 || f > 20) continue;
+
+        if (gcd3(a, b, c) !== 1) continue;
+        if (gcd3(d, e, f) !== 1) continue;
+
+        // 정답확인용 2/3
+        // showAnswer();
+        break;
       }
-    }
-
-  a = getNonOneCoeff();
-  b = getNonOneCoeff();
-
-  // d, e 뽑기 전에 a,b 절댓값 배열 준비
-  const absAB = [Math.abs(a), Math.abs(b)];
-
-  // d, e 초기값
-  d = getNonOneCoeff();
-  e = getNonOneCoeff();
-
-  
-  if (currentStage === 1) {
-    // d와 e 중 한 가지는 a와 b의 절댓값과 같음
-    if (Math.random() < 0.5) {
-      d = Math.random() < 0.5 ? Math.abs(a) : -Math.abs(a);
-    } else {
-      e = Math.random() < 0.5 ? Math.abs(b) : -Math.abs(b);
-    }
-  }
-  
-  if (a * e === b * d) continue; // 해가 없거나 무한대인 경우 제외
-
-  c = Math.round(a * solutionX + b * solutionY);
-  f = Math.round(d * solutionX + e * solutionY);
-
-  if (c < -20 || c > 20) continue;
-  if (f < -20 || f > 20) continue;
-
-  if (gcd3(a, b, c) !== 1) continue;
-  if (gcd3(d, e, f) !== 1) continue;
-
-  //정답확인용 2/3
-  showAnswer();
-
-  break;
-}
-
 
       const showA = a===1 ? '' : (a===-1 ? '-' : a);
       const showB = b===1 ? '+' : (b===-1 ? '-' : (b>0 ? '+'+b : b));
@@ -224,27 +209,23 @@
         \\end{array}
         \\right.
         \\]
-        `;
-
-        document.getElementById("problem").innerHTML = latex;
-        MathJax.typesetPromise();
-
-      document.getElementById("problem").innerHTML = eq1 + "<br>" + eq2;
+      `;
+      document.getElementById("problem").innerHTML = latex;
       MathJax.typesetPromise();
 
       document.getElementById("inputX").value = "";
       document.getElementById("inputY").value = "";
       selectInput('x');
       document.getElementById('result1').textContent = "";
+      document.getElementById('result1').style.backgroundColor = "white";
+      document.getElementById('result1').style.color = "black";
     }
 
     function getNonOneCoeff() {
       if (Math.random() < 0.05) {
-        // 5% 확률로 ±1
         return Math.random() < 0.5 ? 1 : -1;
       } else {
-        // 80% 확률로 ±2~±9
-        let n = Math.floor(Math.random() * 8) + 2; // 2~9
+        let n = Math.floor(Math.random() * 8) + 2;
         return Math.random() < 0.5 ? n : -n;
       }
     }
@@ -265,21 +246,12 @@
       const yCorrect = Math.abs(y-solutionY)<eps;
 
       if (xCorrect && yCorrect) {
-        document.getElementById('result1').innerHTML = `\\(x=${solutionX}\\), \\(y=${solutionY}\\), 정답입니다!`;
+        document.getElementById('result1').innerHTML = `정답입니다!`;
         document.getElementById("result1").style.backgroundColor = "green";
         document.getElementById("result1").style.color = "white";
         winCount++;
         document.getElementById('result2').textContent = `${winCount}번 정답입니다.`;
-
-        setTimeout(() => {
-          document.getElementById('inputX').value = "";
-          document.getElementById('inputY').value = "";
-          selectInput('x');
-          generateProblem();
-        }, 2000);
-
-        MathJax.typesetPromise(); // 수식 다시 렌더링!
-
+        document.getElementById('nextBtn').disabled = false; // 다음 문제 버튼 활성화
       } else {
         let msg = "";
         if (!xCorrect && !yCorrect) msg = "x, y 값이 모두 틀렸습니다!";
@@ -301,22 +273,19 @@
       else if (e.key === 'Backspace') backspace();
       else if (e.key === 'Escape') clearInput();
       else if (e.key === 'Enter') checkAnswer();
+      else if (e.code === 'Space') generateProblem();
       else if (e.key === 'Tab') {
         e.preventDefault();
-    // 현재 선택된 입력이 x이면 y로, y이면 x로 전환
-    if (selectedInput === 'x') {
-      selectInput('y');
-    } else {
-      selectInput('x');
-    }
-  }
+        if (selectedInput === 'x') selectInput('y');
+        else selectInput('x');
+      }
     });
 
-//정답확인용 3/3
-    function showAnswer() {
-      document.getElementById('showX').textContent = solutionX;
-      document.getElementById('showY').textContent = solutionY;
-    }
+    // 정답확인용 3/3
+    // function showAnswer() {
+    //   document.getElementById('showX').textContent = solutionX;
+    //   document.getElementById('showY').textContent = solutionY;
+    // }
 
     window.onload = ()=> setStage(1);
   </script>
