--- a/222.html
+++ b/222.html
@@ -28,9 +28,7 @@
       border-radius: 10px; border: none; background-color: #DDDDDD; cursor: pointer;
     }
     .button:hover { background-color: #bbb; }
-    #result1 {
-      min-height: 45px;
-    }
+    #result1 { min-height: 45px; }
     #nextBtn:disabled {
       background-color: #aaa !important;
       cursor: not-allowed;
@@ -103,6 +101,7 @@
       return Math.abs(a);
     }
     function gcd3(a,b,c) { return gcd(gcd(a,b),c); }
+    function lcm(a,b) { return Math.abs(a*b) / gcd(a,b); }
 
     function setStage(stage) {
       currentStage = stage;
@@ -113,113 +112,142 @@
     }
 
     function selectInput(target) {
-      selectedInput = target;
-      document.getElementById('inputX').classList.remove('selected');
-      document.getElementById('inputY').classList.remove('selected');
-      document.getElementById('result1').textContent = "";
-      if (target === 'x') {
-        document.getElementById('inputX').classList.add('selected');
-        document.getElementById('inputX').value = ""; // 선택 시 값 지우기
-      } else {
-        document.getElementById('inputY').classList.add('selected');
-        document.getElementById('inputY').value = ""; // 선택 시 값 지우기
-      }
+  selectedInput = target;
+  document.getElementById('inputX').classList.remove('selected');
+  document.getElementById('inputY').classList.remove('selected');
+  document.getElementById('result1').textContent = "";
+  document.getElementById('result1').style.backgroundColor = "white";
+  document.getElementById('result1').style.color = "black";
+  if (target === 'x') {
+    document.getElementById('inputX').classList.add('selected');
+    document.getElementById('inputX').value = "";
+  } else {
+    document.getElementById('inputY').classList.add('selected');
+    document.getElementById('inputY').value = "";
+  }
+}
+
+
+function appendNumber(num) {
+  const input = selectedInput === 'x' ? document.getElementById('inputX') : document.getElementById('inputY');
+  input.value += num;
+
+  // 정답여부 메시지 초기화 + 배경색, 글자색 초기화
+  const res = document.getElementById('result1');
+  res.textContent = "";
+  res.style.backgroundColor = "white";
+  res.style.color = "black";
+}
+
+function backspace() {
+  const input = selectedInput === 'x' ? document.getElementById('inputX') : document.getElementById('inputY');
+  input.value = input.value.slice(0, -1);
+
+  // 정답여부 메시지 초기화 + 배경색, 글자색 초기화
+  const res = document.getElementById('result1');
+  res.textContent = "";
+  res.style.backgroundColor = "white";
+  res.style.color = "black";
+}
+
+function clearInput() {
+  const input = selectedInput === 'x' ? document.getElementById('inputX') : document.getElementById('inputY');
+  input.value = "";
+
+  // 정답여부 메시지 초기화 + 배경색, 글자색 초기화
+  const res = document.getElementById('result1');
+  res.textContent = "";
+  res.style.backgroundColor = "white";
+  res.style.color = "black";
+}
+
+
+    // a,b,d,e는 0이 나오면 다시 뽑기,  c,f도 -20~20 범위만 허용
+function getNonZeroCoeff() {
+  let val;
+  do {
+    val = getNonOneCoeff();
+  } while(val === 0);
+  return val;
+}
+
+function generateProblem() {
+  document.getElementById('nextBtn').disabled = true;
+
+  let a,b,c,d,e,f;
+  while (true) {
+    if (currentStage <= 2) {
+      solutionX = (Math.random() < 0.5 ? 1 : -1) * (Math.floor(Math.random() * 9) + 1);
+      solutionY = (Math.random() < 0.5 ? 1 : -1) * (Math.floor(Math.random() * 9) + 1);
+    } else {
+      const fractions = [ [1,2],[1,3],[2,3],[1,4],[3,4],[1,5],[2,5],[3,5],[4,5],[1,6],[5,6] ];
+      let fracX = fractions[Math.floor(Math.random() * fractions.length)];
+      let fracY = fractions[Math.floor(Math.random() * fractions.length)];
+      solutionX = [ (Math.random() < 0.5 ? 1 : -1) * fracX[0], fracX[1] ];
+      solutionY = [ (Math.random() < 0.5 ? 1 : -1) * fracY[0], fracY[1] ];
     }
 
-    function appendNumber(num) {
-      const input = selectedInput === 'x' ? document.getElementById('inputX') : document.getElementById('inputY');
-      input.value += num;
-      document.getElementById('result1').textContent = "";
+    a = getNonZeroCoeff();
+    b = getNonZeroCoeff();
+    d = getNonZeroCoeff();
+    e = getNonZeroCoeff();
+
+    if (currentStage === 1) {
+      if (Math.random() < 0.5) d = Math.sign(a) * Math.abs(a);
+      else e = Math.sign(b) * Math.abs(b);
     }
 
-    function backspace() {
-      const input = selectedInput === 'x' ? document.getElementById('inputX') : document.getElementById('inputY');
-      input.value = input.value.slice(0, -1);
-      document.getElementById('result1').textContent = "";
+    if (a*e === b*d) continue;
+
+    if (currentStage <= 2) {
+      c = a * solutionX + b * solutionY;
+      f = d * solutionX + e * solutionY;
+    } else {
+      let lcmXY = lcm(solutionX[1], solutionY[1]);
+      let xInt = solutionX[0] * (lcmXY/solutionX[1]);
+      let yInt = solutionY[0] * (lcmXY/solutionY[1]);
+
+      c = a * xInt + b * yInt;
+      f = d * xInt + e * yInt;
+
+      a *= lcmXY; b *= lcmXY; d *= lcmXY; e *= lcmXY;
     }
 
-    function clearInput() {
-      const input = selectedInput === 'x' ? document.getElementById('inputX') : document.getElementById('inputY');
-      input.value = "";
-      document.getElementById('result1').textContent = "";
-    }
+    // 0 제외, -20~20 범위 체크
+    if ([a,b,c,d,e,f].some(v => v === 0 || v < -20 || v > 20)) continue;
 
-    function generateProblem() {
-      document.getElementById('nextBtn').disabled = true; // 다음 문제 버튼 비활성화
-      let a,b,c,d,e,f;
-      while (true) {
-        if (currentStage === 1 || currentStage === 2) {
-          solutionX = (Math.random() < 0.5 ? 1 : -1) * (Math.floor(Math.random() * 9) + 1);
-          solutionY = (Math.random() < 0.5 ? 1 : -1) * (Math.floor(Math.random() * 9) + 1);
-        } else if (currentStage === 3) {
-          const fractions = [1/2, 1/3, 2/3, 1/4, 3/4, 1/5, 2/5, 3/5, 4/5, 1/6, 5/6];
-          solutionX = (Math.random() < 0.5 ? 1 : -1) * fractions[Math.floor(Math.random() * fractions.length)];
-          solutionY = (Math.random() < 0.5 ? 1 : -1) * fractions[Math.floor(Math.random() * fractions.length)];
-        } else {
-          if (Math.random() < 0.4) {
-            solutionX = (Math.random() < 0.5 ? 1 : -1) * (Math.floor(Math.random() * 9) + 1);
-            solutionY = (Math.random() < 0.5 ? 1 : -1) * (Math.floor(Math.random() * 9) + 1);
-          } else {
-            const fractions = [1/2, 1/3, 2/3, 1/4, 3/4, 1/5, 2/5, 3/5, 4/5, 1/6, 5/6];
-            solutionX = (Math.random() < 0.5 ? 1 : -1) * fractions[Math.floor(Math.random() * fractions.length)];
-            solutionY = (Math.random() < 0.5 ? 1 : -1) * fractions[Math.floor(Math.random() * fractions.length)];
-          }
-        }
+    if (gcd3(a,b,c) !== 1) continue;
+    if (gcd3(d,e,f) !== 1) continue;
 
-        a = getNonOneCoeff();
-        b = getNonOneCoeff();
-        d = getNonOneCoeff();
-        e = getNonOneCoeff();
+    // 정답확인용 2/3
+    // showAnswer();
+    break;
+  }
 
-        if (currentStage === 1) {
-          if (Math.random() < 0.5) {
-            d = Math.random() < 0.5 ? Math.abs(a) : -Math.abs(a);
-          } else {
-            e = Math.random() < 0.5 ? Math.abs(b) : -Math.abs(b);
-          }
-        }
+  const showA = (a === 1) ? '' : (a === -1) ? '-' : a;
+  const showB = (b === 1) ? '+': (b === -1) ? '-' : (b > 0 ? `+${b}` : b);
+  const showD = (d === 1) ? '' : (d === -1) ? '-' : d;
+  const showE = (e === 1) ? '+' : (e === -1) ? '-' : (e > 0 ? `+${e}` : e);
 
-        if (a * e === b * d) continue;
+  const latex = `
+    \\[
+    \\left\\{
+    \\begin{array}{l}
+    ${showA}x ${showB}y = ${c} \\\\
+    ${showD}x ${showE}y = ${f}
+    \\end{array}
+    \\right.
+    \\]
+  `;
+  document.getElementById("problem").innerHTML = latex;
+  MathJax.typesetPromise();
 
-        c = Math.round(a * solutionX + b * solutionY);
-        f = Math.round(d * solutionX + e * solutionY);
+  document.getElementById("inputX").value = "";
+  document.getElementById("inputY").value = "";
+  selectInput('x');
+  document.getElementById('result1').textContent = "";
+}
 
-        if (c < -20 || c > 20) continue;
-        if (f < -20 || f > 20) continue;
-
-        if (gcd3(a, b, c) !== 1) continue;
-        if (gcd3(d, e, f) !== 1) continue;
-
-        // 정답확인용 2/3
-        // showAnswer();
-        break;
-      }
-
-      const showA = a===1 ? '' : (a===-1 ? '-' : a);
-      const showB = b===1 ? '+' : (b===-1 ? '-' : (b>0 ? '+'+b : b));
-      const showD = d===1 ? '' : (d===-1 ? '-' : d);
-      const showE = e===1 ? '+' : (e===-1 ? '-' : (e>0 ? '+'+e : e));
-
-      const latex = `
-        \\[
-        \\left\\{
-        \\begin{array}{l}
-        ${showA}x ${showB}y = ${c} \\\\
-        ${showD}x ${showE}y = ${f}
-        \\end{array}
-        \\right.
-        \\]
-      `;
-      document.getElementById("problem").innerHTML = latex;
-      MathJax.typesetPromise();
-
-      document.getElementById("inputX").value = "";
-      document.getElementById("inputY").value = "";
-      selectInput('x');
-      document.getElementById('result1').textContent = "";
-      document.getElementById('result1').style.backgroundColor = "white";
-      document.getElementById('result1').style.color = "black";
-    }
 
     function getNonOneCoeff() {
       if (Math.random() < 0.05) {
@@ -241,9 +269,18 @@
       const x = evalFraction(document.getElementById('inputX').value.trim());
       const y = evalFraction(document.getElementById('inputY').value.trim());
 
+      let trueX, trueY;
+      if (Array.isArray(solutionX)) {
+        trueX = solutionX[0]/solutionX[1];
+        trueY = solutionY[0]/solutionY[1];
+      } else {
+        trueX = solutionX;
+        trueY = solutionY;
+      }
+
       const eps = 1e-6;
-      const xCorrect = Math.abs(x-solutionX)<eps;
-      const yCorrect = Math.abs(y-solutionY)<eps;
+      const xCorrect = Math.abs(x-trueX)<eps;
+      const yCorrect = Math.abs(y-trueY)<eps;
 
       if (xCorrect && yCorrect) {
         document.getElementById('result1').innerHTML = `정답입니다!`;
@@ -251,7 +288,7 @@
         document.getElementById("result1").style.color = "white";
         winCount++;
         document.getElementById('result2').textContent = `${winCount}번 정답입니다.`;
-        document.getElementById('nextBtn').disabled = false; // 다음 문제 버튼 활성화
+        document.getElementById('nextBtn').disabled = false;
       } else {
         let msg = "";
         if (!xCorrect && !yCorrect) msg = "x, y 값이 모두 틀렸습니다!";
@@ -283,8 +320,13 @@
 
     // 정답확인용 3/3
     // function showAnswer() {
-    //   document.getElementById('showX').textContent = solutionX;
-    //   document.getElementById('showY').textContent = solutionY;
+    //   if (Array.isArray(solutionX)) {
+    //     document.getElementById('showX').textContent = `${solutionX[0]}/${solutionX[1]}`;
+    //     document.getElementById('showY').textContent = `${solutionY[0]}/${solutionY[1]}`;
+    //   } else {
+    //     document.getElementById('showX').textContent = solutionX;
+    //     document.getElementById('showY').textContent = solutionY;
+    //   }
     // }
 
     window.onload = ()=> setStage(1);
