--- a/222.html
+++ b/222.html
@@ -84,6 +84,12 @@
     <!-- <div id="answer" style="font-size:28px; margin-top:20px; color:#888;">
       (정답: x = <span id="showX"></span>, y = <span id="showY"></span>)
     </div> -->
+    <br><br><br>
+    <div style="font-size: 25px;">
+      1, 2단계: 정답이 정수<br>
+      3단계: 정답이 분수<br>
+      4단계: 정딥이 정수 또는 분수<br>
+    </div>
   </center>
 
   <script>
