--- a/322.html
+++ b/322.html
@@ -80,12 +80,27 @@
 <div id="scoreBoard" style="font-size:25px">정답: 0 | 오답: 0</div><br>
 <button onclick="generateQuiz()" style="width:300px; height:60px; font-size:36px;border-radius:20px;border:1px solid #ffffff;background:#3399FF;color:white;cursor:pointer;">다음 문제</button>
 <br><br>
-<img src="img_322.png" style="width: 50%; height: auto;">
-<!--<div style="font-size:20px">1-3단계: $a=1$<br>
-  4~6단계:  $a$는 모든 수<br>
-  1,4단계: $\sqrt{D}$ 유리수<br>
-  2,5단계: $\sqrt{D}$ 무리수<br>
-  3,6단계: 모두</div><br>-->
+
+<table align="center" style="font-size:20px; border-collapse:collapse;height:120px;">
+  <tr>
+    <td width="120px"></td>
+    <td width="120px">유리수 근</td>
+    <td width="120px">무리수 근</td>
+    <td width="120px">혼합 근</td>
+  </tr>
+  <tr>
+    <td style=>${a=1}$</td>
+    <td style="border:1px solid #000000;">1단계</td>
+    <td style="border:1px solid #000000;">2단계</td>
+    <td style="border:1px solid #000000;">3단계</td>
+  </tr>
+  <tr>
+    <td style=>${a}$는 모든 수</td>
+    <td style="border:1px solid #000000;">4단계</td>
+    <td style="border:1px solid #000000;">5단계</td>
+    <td style="border:1px solid #000000;">6단계</td>
+  </tr>
+</table>
 
 <script>
   let currentStage = 1;
