--- a/122.html
+++ b/122.html
@@ -113,7 +113,27 @@
         2,5단계: 정답이 정수가 아님<br>
         3,6단계: 정답이 둘 다 가능
     </font>-->
-    <br><img src="img_122.png" style="width: 50%; height: auto;">
+    <br>
+    <table align="center" style="font-size:20px; border-collapse:collapse;height:120px;text-align:center;">
+      <tr>
+        <td width="220px"></td>
+        <td width="120px">해가 정수</td>
+        <td width="120px">해가 정수가 아님</td>
+        <td width="120px">해는 모든 수</td>
+      </tr>
+      <tr>
+        <td style=>${ax+b=cx+d}$</td>
+        <td style="border:1px solid #000000;">1단계</td>
+        <td style="border:1px solid #000000;">2단계</td>
+        <td style="border:1px solid #000000;">3단계</td>
+      </tr>
+      <tr>
+        <td style=>${a(bx+c)=dx+e}$</td>
+        <td style="border:1px solid #000000;">4단계</td>
+        <td style="border:1px solid #000000;">5단계</td>
+        <td style="border:1px solid #000000;">6단계</td>
+      </tr>
+    </table>
   </center>
 
   <script>
