--- a/322.html
+++ b/322.html
@@ -81,7 +81,7 @@
 <button onclick="generateQuiz()" style="width:300px; height:60px; font-size:36px;border-radius:20px;border:1px solid #ffffff;background:#3399FF;color:white;cursor:pointer;">다음 문제</button>
 <br><br>
 
-<table align="center" style="font-size:20px; border-collapse:collapse;height:120px;">
+<table align="center" style="font-size:20px; border-collapse:collapse;height:120px;text-align:center;">
   <tr>
     <td width="120px"></td>
     <td width="120px">유리수 근</td>
