--- a/222.html
+++ b/222.html
@@ -88,7 +88,7 @@
     <div style="font-size: 25px;">
       1, 2단계: 정답이 정수<br>
       3단계: 정답이 분수<br>
-      4단계: 정답답이 정수 또는 분수<br>
+      4단계: 정답이 정수 또는 분수<br>
     </div>
   </center>
 
