--- a/322.html
+++ b/322.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
 <meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=0.8">
 <title>이차방정식</title>
 <script>
   window.MathJax = {
@@ -56,7 +56,7 @@
     cursor: pointer;
   }
   .stage-btn.active {
-    background-color: #4a90e2;
+    background-color: #3399FF;
     color: white;
   }
   #scoreBoard {
@@ -71,7 +71,7 @@
 <div>
   <button class="stage-btn" onclick="setStage(1)">1단계</button>
   <button class="stage-btn" onclick="setStage(2)">2단계</button>
-  <button class="stage-btn" onclick="setStage(3)">3단계</button><br>
+  <button class="stage-btn" onclick="setStage(3)">3단계</button>
   <button class="stage-btn" onclick="setStage(4)">4단계</button>
   <button class="stage-btn" onclick="setStage(5)">5단계</button>
   <button class="stage-btn" onclick="setStage(6)">6단계</button>
