--- a/112.html
+++ b/112.html
@@ -155,6 +155,7 @@
                 wincount = wincount + 1;
                 document.getElementById("result1").textContent = "정답입니다.";
                 document.getElementById("result1").style.backgroundColor = "green";
+                document.getElementById("result1").style.color = "white";
                 timeout = setTimeout("resultreset()", 1000);
                 document.getElementById("result2").textContent = wincount + "번 정답입니다.";
                 start();
@@ -162,6 +163,7 @@
                 losecount = losecount + 1;
                 document.getElementById("result1").textContent = "틀렸습니다.";
                 document.getElementById("result1").style.backgroundColor = "red";
+                document.getElementById("result1").style.color = "white";
                 timeout = setTimeout("resultreset()", 1000);
                 document.getElementById("result3").textContent = losecount + "번 틀렸습니다.";
             }
